--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family:
@@ -14,4 +18,31 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.app-color-primary {
+  --tw-text-opacity: 1;
+
+  color: rgb(2 144 255/var(--tw-text-opacity));
+}
+
+.app-bg-primary {
+  --tw-text-opacity: 1;
+
+  background-color: rgb(2 144 255/var(--tw-text-opacity));
+  color: #fff;
+}
+
+.header-mb {
+  margin-bottom: 55px;
+}
+
+.book-card,
+.book-form {
+  width: 90%;
+}
+
+.book-form {
+  margin: auto;
+  margin-bottom: 25px;
 }
